# traidano-dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  README.md  docker-compose.yaml
.github/workflows/: release.yaml  rust.yml
.sqlx/: query-08565ed4337838e25b0224726d50dd29264d0fbc22f7a551935fd4b7c97ae2e0.json  query-502383e0673b96aea60c0d1c63b9d62a5fbd08c52c7f6a35e8b4874e519cabc6.json  query-8f25370de7c9422e555e0628958ab39bff03e24c3c58fadb5ac4742b90d657ca.json
base/src/: lib.rs
bots/: Cargo.toml
bots/src/: bots.rs  lib.rs  models.rs
conf/: config.yaml  test.txt
deploy/: cluster.yaml  docker-compose.yaml  entry_point.sh  init.sql
deploy/kube/: app.yaml  database.yaml  grafana-value.yaml  grafana-values.yaml  monitoring-ingress.yaml  otel.yaml  prometheus-values.yaml  traidano-ingress.yaml
deploy/otel/: otel-collector-config.yaml
deploy/prometheus/: grafana-datasources.yaml  prometheus.yaml  traidano-dashboard.json
src/: base.rs  configuration.rs  error.rs  handler.rs  handlers.rs  lib.rs  main.rs  trade.rs
src/bot/: bot_manager.rs  config.rs  mod.rs
src/bot/stategies/: bot_manager.rs  mod.rs
src/bot/strategies/: mean_reversion.rs  mod.rs  moving_avarage.rs  oth.rs  smart_money.rs
src/core/: functions.rs  mod.rs  rate_limit.rs  rate_limiter.rs
src/dao/: bot.rs
src/handlers/: account.rs  bar.rs  bot.rs  market.rs  mod.rs  order.rs
src/migration/: bots.sql
src/models/: account.rs  bar.rs  mod.rs  order.rs  position.rs  trade.rs
