[package]
name = "traidano"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
axum-macros = "0.4.1"
bytes = "*"
config = "0.14.0"
chrono = "0.4.38"
env_logger = "0.11.3"
http-body-util = "0.1.2"
hyper = { version = "1.4.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.6", features = ["client", "client-legacy"] }
log = "0.4.22"
num-decimal = { version = "0.2.4", default-features = false, features = [
    "num-v04",
    "serde",
]}
native-tls = "0.2.12"
opentelemetry = "0.24.0"
opentelemetry_sdk = "0.24.1"
opentelemetry-stdout = {version = "0.5.0", features = ["trace"]}
opentelemetry-prometheus = "0.17.0"
prometheus = "0.13.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.120"
serde-this-or-that = "0.4.2"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres"] }
ta = "0.5.0"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-native-tls = "0.3.1"
reqwest = "0.12.5"
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.86"
