[package]
name = "traidano"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
axum-macros = "0.4.1"
bytes = "*"
config = "0.14.0"
chrono = "0.4.38"
http-body-util = "0.1.2"
hyper = { version = "1.4.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.6", features = ["client", "client-legacy"] }
log = "0.4.22"
num-decimal = { version = "0.2.4", default-features = false, features = [
    "num-v04",
    "serde",
]}
native-tls = "0.2.12"
opentelemetry = {version = "0.24.0", features = ["metrics", "logs", "trace"] }
opentelemetry_sdk = { version = "*", features = ["rt-tokio", "logs"] }
opentelemetry-stdout = {version = "0.5.0", features = ["trace"]}
opentelemetry-otlp = { version = "0.17.0", features = ["tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-prometheus = "0.17.0"
prometheus = "0.13.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.120"
serde-this-or-that = "0.4.2"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres"] }
ta = "0.5.0"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
opentelemetry-appender-tracing = {version = "0.5.0", default-features = false}
tracing-subscriber = {version = "0.3.18", features = ["env-filter","registry", "std"]}
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-native-tls = "0.3.1"
tower-http = { version = "0.5.2", features = ["trace"] }
reqwest = "0.12.5"
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.86"
once_cell = "1.19.0"


[profile.dev.package.sqlx-macros]
opt-level = 3